# eFilament

./: README.md
3D/: e_Filament_test_mount_2.STEP
PCB/Gerbers/: Status Report.Txt  eFilament-macro.APR_LIB  eFilament.DRL  eFilament.DRR  eFilament.EXTREP  eFilament.GBL  eFilament.GBO  eFilament.GBP  eFilament.GBS  eFilament.GM  eFilament.GM7  eFilament.GTL  eFilament.GTO  eFilament.GTP  eFilament.GTS  eFilament.LDP  eFilament.REP  eFilament.TXT  eFilament.apr
SOFT/ESP32_S3/components/lvgl/: lv_conf.h
SOFT/ESP32_S3/main/: CMakeLists.txt  color_log.c  color_log.h  comm.c  comm.h  config.c  config.h  e_filament.c  e_filament.h  idf_component.yml  main.c  task_monitor.c  task_monitor.h  wifi.c  wifi.h
SOFT/ESP32_S3/main/DRIVERS/PCF85063A/: PCF85063A.c  PCF85063A.h
SOFT/ESP32_S3/main/DRIVERS/SH6801/: rotation.c  rotation.h  ws_esp32s3_amoled_143.c  ws_esp32s3_amoled_143.h  ws_esp32s3_amoled_143.old2_c  ws_esp32s3_amoled_143.old2_h
SOFT/ESP32_S3/main/DRIVERS/TOUCH/: touch_bsp.c
SOFT/ESP32_S3/main/UI/: actions.h  fonts.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui_font_dec160.c  ui_font_dec80.c  ui_font_neu100.c  ui_font_pbd160.c  ui_font_rbt_lgt_100_num.c  ui_font_rbt_lgt_150_num.c  ui_font_rbt_lgt_60_num.c
SOFT/ESP32_S3/partition/: eFilament.csv  options.cfg  wifi
SOFT/ESP32_S3/partition/srv/: eFilament.css  eFilament.js  index.html
SOFT/ESP32_S3/partition_table/: partitionTable.csv
SOFT/STM32G070/Core/Inc/: FreeRTOSConfig.h  main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h
SOFT/STM32G070/Core/Src/: dma.c  (+7 more)
SOFT/STM32G070/EFIL/: efil.c  efil.h
(+6 files in other folders)
